--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,24 @@
   </head>
 
   <body>
+    <nav>
+      <div class="nav-wrapper">
+        <a href="/" class="brand-logo">Proppy</a>
+        <ul class="right">
+          <% if creator_signed_in? %>
+            <li><%= link_to "Logout", destroy_creator_session_path, :method => :delete %></li>
+          <% else %>
+            <li><%= link_to "Sign Up", new_creator_registration_path %></li>
+            <li><%= link_to "Login", new_creator_session_path %></li>
+          <% end %>
+        </ul>
+      </div>
+    </nav>
+    <div class="container">
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
+      <%= yield %>
+    </div>
 
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-
-    <%= yield %>
   </body>
 </html>
