--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,47 @@
-<h1>Proppy</h1>
-<p>Welcome to Proppy!</p>
+<div class="row">
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+  	<!-- HEADER -->
+	<div class="header">
+
+	  <div class="row">
+		<div class="col-lg-12">
+			<h1><!-- no title --></h1>
+		</div>
+	  </div>
+
+				
+	  <!-- create game button -->
+	  <div class="row">
+		<div class="col-lg-2 col-lg-offset-10">
+		  <div class="btn-group" style="box-shadow:none;">
+			<button id="makePost" type="button" class="btn bg-light-blue"  >
+			  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Create Game!
+			</button>
+		  </div>	
+		</div>
+		
+	  </div>
+	  <!-- end create game button -->
+	</div>
+	<!-- END HEADER -->
+
+	<!-- BODY -->
+	<div class="row">
+	  <div class="card">
+	    <div class="body inner-card">
+	    	<% if false %>
+	          <%= render '/games/list' %>     
+	        <% else %>
+	          <h1>Create A Game and start getting jiggy.</h1>
+	          <p>TODO: Add some info about proppy, pictures, etc</p>
+	          <%= image_tag "DeathtoStock_Wired3.jpg", class: "full-size-image" %>
+	          <p>If you see this you are NOT logged in.</p>
+	        <% end %> 
+	    </div>
+	  </div>
+	</div>
+	<!-- END BODY -->
+
+
+  </div>
+</div>
