--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,9 +10,9 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require basic-style
+ *= require bootstrap-style
  *= require materialize-gem
- *
+ *= require basic-style
  */
 
 
