--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -14,6 +14,9 @@
   <div class="field">
     <%= form.label :title %>
     <%= form.text_field :title, id: :game_title %>
+
+    <%= form.label :question_1 %>
+    <%= form.text_field :question_1, id: :game_question_1 %>
   </div>
 
   <div class="actions">
