--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -14,7 +14,7 @@
 	  <div class="row">
   		<div class="col-lg-2 col-lg-offset-10">
   		  <div class="btn-group" style="box-shadow:none;">
-        <%= link_to(new_game_path) do %>
+        <%= link_to('/games/select') do %>
     			<button id="makePost" type="button" class="btn bg-light-blue"  >
     			  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Create Game!
     			</button>
