--- a/app/assets/stylesheets/basic-style.scss
+++ b/app/assets/stylesheets/basic-style.scss
@@ -22,13 +22,14 @@ body {
 	width: 100%;
 }
 
-.questions h1{
-	height: 140px;
-	color: #fff;
-	padding: 30px;
+input.questions {
+	height: 140px !important;
+	width: 100% !important;
+	color: #fff !important;
+	padding: 30px !important;
 	overflow-x: scroll;
     white-space: nowrap;
-    width: 100%;
+    font-size:500%;
 }
 .questions.nba {
 	background-color: #a32525;
