--- a/app/views/games/select.html.erb
+++ b/app/views/games/select.html.erb
@@ -3,7 +3,7 @@
 <div class="row">
   <div class="col-lg-6">
 
-    <form action="/games/create" id="searchBar" method="post">
+    <form action="/games" id="searchBar" method="post">
       <!-- Add authenticity token to form -->
       <%= render 'proppy_nba_finals_2017_game2' %>
       <%= tag(:input, :type => "hidden", :name => request_forgery_protection_token.to_s, :value => form_authenticity_token) %>
