--- a/app/views/games/_proppy_nba_finals_2017_game2.html.erb
+++ b/app/views/games/_proppy_nba_finals_2017_game2.html.erb
@@ -1,1 +1,3 @@
-<%= hidden_field(:game, :question1) %>
+
+<%= hidden_field(:game, :title, :value => '2017 NBA Finals Game 2') %>
+<%= hidden_field(:game, :question_1, :value => 'Will LeBron Score more than 32?') %>
