--- a/app/views/games/select.html.erb
+++ b/app/views/games/select.html.erb
@@ -4,34 +4,17 @@
   <div class="col-lg-6">
 
     <form action="/games" id="searchBar" method="post">
-      <!-- Add authenticity token to form -->
+      <!-- Add pre created game -->
       <%= render 'proppy_nba_finals_2017_game2' %>
+      <!-- Add authenticity token to form -->
       <%= tag(:input, :type => "hidden", :name => request_forgery_protection_token.to_s, :value => form_authenticity_token) %>
       <input type="submit" value="NBA Finals 2017" class="questions nba img-rounded">
     </form>
+  </div>
 
-  </div>
   <div class="col-lg-6">
-    <form action="/games/create_nba" id="searchBar" method="post">
-      <!-- Add authenticity token to form -->
-      <%= tag(:input, :type => "hidden", :name => request_forgery_protection_token.to_s, :value => form_authenticity_token) %>
-      <input type="submit" value="NHL Finals 2017" class="questions nhl img-rounded">
-    </form>
+    <%= button_to 'Custom Questions', new_game_path, method: :get, class:"questions cst img-rounded", type:"button" %>
   </div>
+
 </div>
-<div class="row">
-  <div class="col-lg-6">
-    <form action="/games/create_nba" id="searchBar" method="post">
-      <!-- Add authenticity token to form -->
-      <%= tag(:input, :type => "hidden", :name => request_forgery_protection_token.to_s, :value => form_authenticity_token) %>
-      <input type="submit" value="MLB Finals 2017" class="questions mlb img-rounded">
-    </form>
-  </div>
-  <div class="col-lg-6">
-    <form action="/games/create_nba" id="searchBar" method="post">
-      <!-- Add authenticity token to form -->
-      <%= tag(:input, :type => "hidden", :name => request_forgery_protection_token.to_s, :value => form_authenticity_token) %>
-      <input type="submit" value="Custom Questions" class="questions cst img-rounded">
-    </form>
-  </div>
-</div>
+
