--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -5,6 +5,10 @@
   <ul>
   <% @questions.each do |question| %>
     <li><%= question.title %></li>
+    <ul>
+      <li><%= question.response1 %></li>
+      <li><%= question.response2 %></li>
+    </ul>
   <% end %>
   </ul>
 </p>
