--- a/app/views/games/_list.html.erb
+++ b/app/views/games/_list.html.erb
@@ -3,6 +3,7 @@
     <tr>
       <th>Title</th>
       <th colspan="3"></th>
+      <th>Code</th>
     </tr>
   </thead>
 
@@ -13,6 +14,7 @@
         <td><%= link_to 'Show', game %></td>
         <td><%= link_to 'Edit', edit_game_path(game) %></td>
         <td><%= link_to 'Destroy', game, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= game.code %></td>
       </tr>
     <% end %>
   </tbody>
