--- a/app/views/games/_list.html.erb
+++ b/app/views/games/_list.html.erb
@@ -2,7 +2,7 @@
   <thead>
     <tr>
       <th>Title</th>
-      <th colspan="3"></th>
+      <th colspan="4"></th>
       <th>Code</th>
     </tr>
   </thead>
@@ -14,6 +14,13 @@
         <td><%= link_to 'Show', game %></td>
         <td><%= link_to 'Edit', edit_game_path(game) %></td>
         <td><%= link_to 'Destroy', game, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
+        <% if not game.locked then %>
+          <td><%= link_to 'Lock', lock_game_path(game), method: :post, data: {confirm: 'Are you sure? You cannot unlock the game! Only do this when you are finished editing the game.'} %></td>
+        <% else %>
+          <td>Locked</td>
+        <% end %>
+        
         <td><%= game.code %></td>
       </tr>
     <% end %>
