--- a/app/views/submissions/new.html.erb
+++ b/app/views/submissions/new.html.erb
@@ -29,6 +29,11 @@
                   </div>
                 <% end %>
 
+                <h4>Your Name</h4>
+                <div class="form-group">
+                  <%= f.text_field :name, class:"form-control", placeholder:"Tasty Wilikers" %>
+                </div>
+
                 <div class="form-group">
                   <%= f.hidden_field :code, class:"form-control", placeholder:"Game Code", value:@code %>
                 </div>
