--- a/app/views/games/play.html.erb
+++ b/app/views/games/play.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @game do |form| %>
+<%= form_for @game, :url => {:action => "update_correct_answers", :id => @game} do |form| %>
   <% if @game.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@game.errors.count, "error") %> prohibited this game from being saved:</h2>
@@ -19,11 +19,10 @@
 
       <div class="form-group">
         <h4><%= question.title %></h4>
-
-        <%= radio_button("question_#{i + 1}", "correct_response", "1") %>
+        <%= radio_button("question_#{i + 1}", "correct_response", "1", :checked => (question.correct_response == "1")) %>
         <%= label_tag("question_#{i + 1}_correct_response_1", question.response1) %>
 
-        <%= radio_button("question_#{i + 1}", "correct_response", "2") %>
+        <%= radio_button("question_#{i + 1}", "correct_response", "2", :checked => (question.correct_response == "2")) %>
         <%= label_tag("question_#{i + 1}_correct_response_2", question.response2) %>
 
       </div>
