--- a/app/views/submissions/new.html.erb
+++ b/app/views/submissions/new.html.erb
@@ -1,22 +1,11 @@
 <%= form_for @submission do |f| %>
 
-<section class="container">
-  
-  <div class="container-fluid">
-    <div class="block-header">
-      <h2></h2>
-    </div>
-    <!-- Input -->
     <div class="row clearfix">
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
         <div class="card">
-          <div class="header">
-            <h2>
-              <%= @submission.game.title.upcase %>
-            </h2>
-          </div>
-          <div class="body">
-            
+
+            <h2><%= @submission.game.title.upcase %></h2>
+
             <div class="row clearfix">
               <div class="col-sm-12">
 
@@ -44,10 +33,8 @@
 
               </div>
             </div>
-          </div>
+
         </div>
       </div>
     </div>
-  </div>
-</section>
 <% end %>
